# cpu-cycles-reader

./: Cargo.toml  README.md  build.rs
src/: cycles.rs  error.rs  instant.rs  lib.rs
src/cycles/: ext.rs  mod.rs  trans.rs
src/ffi/: ffi.c  mod.rs
