[package]
name = "cpu_cycles_reader"
version = "0.1.40"
edition = "2021"
description = "perf_event_read package specialized for reading cpu cycles"
repository = "https://github.com/shadow3aaa/cpu-cycles-reader"
license = "WTFPL"
readme = "README.md"
keywords = ["cpu", "cycles", "linux", "ffi-bind"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
libc = "0.2.147"

[build-dependencies]
cc = "1.0.79"
